crates/dsql-generate/tests/it/snapshots/it__generate__aggregate_objects_flow_through_operation_and_fragment_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: "artifacts.join(\"\\n---\\n\")"
---
FlatPostStats
{"name":"FlatPostStats","kind":"fragment","table":"users","result":{"fields":[{"path":"flat_post_count","name":"flat_post_count","parent_path":"","kind":"scalar","data_type":"int","nullable":false},{"path":"flat_latest","name":"flat_latest","parent_path":"","kind":"scalar","data_type":"timestamptz","nullable":true}]},"params":[{"path":"params.flat_title","data_type":"text","enum_values":[],"required":true,"nullable":false}],"input":[],"dynamic_inputs":[],"fragment_spreads":[],"source_map":[{"id":"FlatPostStats","file":"queries/frontend/aggregates.dsql","range":{"start":239,"end":393}}]}
---
FlattenNested
{"name":"FlattenNested","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"dsql_root\".\"accounts\" as \"accounts\"\nfrom\n  (\n    select\n      1) as \"dsql_singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'id',\n        \"accounts_c1b9ad84\".\"id\",\n        'flat_post_count',\n        \"posts_json_cd19cb80\".\"flat_post_count\",\n        'flat_latest',\n        \"posts_json_cd19cb80\".\"flat_latest\"\n      ) as \"accounts\"\n    from\n      \"public\".\"users\" as \"accounts_c1b9ad84\"\n      left join LATERAL (\n        select\n          COUNT(*) as \"flat_post_count\",\n          MAX(\"posts_cd19cb80\".\"created_at\") as \"flat_latest\"\n        from\n          \"public\".\"posts\" as \"posts_cd19cb80\"\n        where\n          \"posts_cd19cb80\".\"user_id\" = \"accounts_c1b9ad84\".\"id\"\n          and \"posts_cd19cb80\".\"title\" = ($1)\n      ) as \"posts_json_cd19cb80\" on true\n    limit\n      1\n  ) as \"dsql_root\" on true","parameters":[{"path":"input.accounts.body.FlatPostStats.params.flat_title"}],"variants":[]},"result":{"fields":[{"path":"accounts","name":"accounts","parent_path":"","kind":"object","data_type":"object","nullable":true},{"path":"accounts.id","name":"id","parent_path":"accounts","kind":"scalar","data_type":"uuid","nullable":false},{"path":"accounts.flat_post_count","name":"flat_post_count","parent_path":"accounts","kind":"scalar","data_type":"int","nullable":false},{"path":"accounts.flat_latest","name":"flat_latest","parent_path":"accounts","kind":"scalar","data_type":"timestamptz","nullable":true}]},"params":[],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[{"path":"accounts","fragment":"FlatPostStats"}],"source_map":[{"id":"FlattenNested","file":"queries/frontend/aggregates.dsql","range":{"start":821,"end":905}}]}
---
FlattenOwner
{"name":"FlattenOwner","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"dsql_root\".\"feed\" as \"feed\"\nfrom\n  (\n    select\n      1) as \"dsql_singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'id',\n        \"feed_ed7b7225\".\"id\",\n        'owner_name',\n        \"users_json_df293de7\".\"owner_name\",\n        'owner_posts',\n        \"users_json_df293de7\".\"owner_posts\",\n        'owner_post_count',\n        \"users_json_df293de7\".\"owner_post_count\"\n      ) as \"feed\"\n    from\n      \"public\".\"posts\" as \"feed_ed7b7225\"\n      left join LATERAL (\n        select\n          \"users_df293de7\".\"name\" as \"owner_name\",\n          \"owner_posts_json_cde7a0d1\".\"owner_posts_result_cde7a0d1\" as \"owner_posts\",\n          \"posts_json_0cd127c5\".\"owner_post_count\" as \"owner_post_count\"\n        from\n          \"public\".\"users\" as \"users_df293de7\"\n          left join LATERAL (\n            select\n              JSON_BUILD_OBJECT('title', \"owner_posts_cde7a0d1\".\"title\") as \"owner_posts_result_cde7a0d1\"\n            from\n              \"public\".\"posts\" as \"owner_posts_cde7a0d1\"\n            where\n              \"owner_posts_cde7a0d1\".\"user_id\" = \"users_df293de7\".\"id\"\n            limit\n              1\n          ) as \"owner_posts_json_cde7a0d1\" on true\n          left join LATERAL (\n            select\n              COUNT(*) as \"owner_post_count\"\n            from\n              \"public\".\"posts\" as \"posts_0cd127c5\"\n            where\n              \"posts_0cd127c5\".\"user_id\" = \"users_df293de7\".\"id\"\n          ) as \"posts_json_0cd127c5\" on true\n        where\n          \"users_df293de7\".\"id\" = \"feed_ed7b7225\".\"user_id\"\n          and \"users_df293de7\".\"name\" = ($1)\n      ) as \"users_json_df293de7\" on true\n    limit\n      1\n  ) as \"dsql_root\" on true","parameters":[{"path":"params.owner_name"}],"variants":[]},"result":{"fields":[{"path":"feed","name":"feed","parent_path":"","kind":"object","data_type":"object","nullable":true},{"path":"feed.id","name":"id","parent_path":"feed","kind":"scalar","data_type":"uuid","nullable":false},{"path":"feed.owner_name","name":"owner_name","parent_path":"feed","kind":"scalar","data_type":"text","nullable":true},{"path":"feed.owner_posts","name":"owner_posts","parent_path":"feed","kind":"object","data_type":"object","nullable":true},{"path":"feed.owner_posts.title","name":"title","parent_path":"feed.owner_posts","kind":"scalar","data_type":"text","nullable":true},{"path":"feed.owner_post_count","name":"owner_post_count","parent_path":"feed","kind":"scalar","data_type":"int","nullable":true}]},"params":[{"path":"params.owner_name","data_type":"text","enum_values":[],"required":true,"nullable":false}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"FlattenOwner","file":"queries/frontend/aggregates.dsql","range":{"start":906,"end":1136}}]}
---
FlattenRoot
{"name":"FlattenRoot","kind":"query","sql":{"dialect":"postgres","text":"select\n  TO_JSON(COUNT(*)) as \"user_count\",\n  TO_JSON(MIN(\"users_99fc7350\".\"name\")) as \"first_name\"\nfrom\n  \"public\".\"users\" as \"users_99fc7350\"\nwhere\n  \"users_99fc7350\".\"name\" = ($1)","parameters":[{"path":"params.flat_name"}],"variants":[]},"result":{"fields":[{"path":"user_count","name":"user_count","parent_path":"","kind":"scalar","data_type":"int","nullable":false},{"path":"first_name","name":"first_name","parent_path":"","kind":"scalar","data_type":"text","nullable":true}]},"params":[{"path":"params.flat_name","data_type":"text","enum_values":[],"required":true,"nullable":false}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"FlattenRoot","file":"queries/frontend/aggregates.dsql","range":{"start":694,"end":820}}]}
---
GroupedRoot
{"name":"GroupedRoot","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'label',\n        \"user_groups_f6ccf13c_groups_cc6d42bd\".\"label\",\n        'count',\n        \"user_groups_f6ccf13c_groups_cc6d42bd\".\"count\",\n        'latest_name',\n        \"user_groups_f6ccf13c_groups_cc6d42bd\".\"latest_name\"\n      )\n    ),\n    '[]'\n  ) as \"user_groups\"\nfrom\n  (\n    select\n      \"user_groups_f6ccf13c\".\"name\" as \"label\",\n      COUNT(*) as \"count\",\n      MAX(\"user_groups_f6ccf13c\".\"name\") as \"latest_name\"\n    from\n      \"public\".\"users\" as \"user_groups_f6ccf13c\"\n    group by\n      \"user_groups_f6ccf13c\".\"name\"\n  ) as \"user_groups_f6ccf13c_groups_cc6d42bd\"","parameters":[],"variants":[]},"result":{"fields":[{"path":"user_groups","name":"user_groups","parent_path":"","kind":"array","data_type":"object","nullable":false},{"path":"user_groups.label","name":"label","parent_path":"user_groups","kind":"scalar","data_type":"text","nullable":false},{"path":"user_groups.count","name":"count","parent_path":"user_groups","kind":"scalar","data_type":"int","nullable":false},{"path":"user_groups.latest_name","name":"latest_name","parent_path":"user_groups","kind":"scalar","data_type":"text","nullable":false}]},"params":[],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"GroupedRoot","file":"queries/frontend/aggregates.dsql","range":{"start":511,"end":624}}]}
---
NestedStats
{"name":"NestedStats","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"dsql_root\".\"users\" as \"users\"\nfrom\n  (\n    select\n      1) as \"dsql_singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'id',\n        \"users_99fc7350\".\"id\",\n        'post_stats',\n        \"post_stats_json_f1ab13d3\".\"post_stats_result_f1ab13d3\",\n        'post_groups',\n        \"post_groups_json_412749f0\".\"post_groups_result_412749f0\"\n      ) as \"users\"\n    from\n      \"public\".\"users\" as \"users_99fc7350\"\n      left join LATERAL (\n        select\n          JSON_BUILD_OBJECT(\n            'count',\n            COUNT(*),\n            'latest',\n            MAX(\"post_stats_f1ab13d3\".\"created_at\")\n          ) as \"post_stats_result_f1ab13d3\"\n        from\n          \"public\".\"posts\" as \"post_stats_f1ab13d3\"\n        where\n          \"post_stats_f1ab13d3\".\"user_id\" = \"users_99fc7350\".\"id\"\n          and \"post_stats_f1ab13d3\".\"title\" = ($1)\n      ) as \"post_stats_json_f1ab13d3\" on true\n      left join LATERAL (\n        select\n          COALESCE(\n            JSON_AGG(\n              JSON_BUILD_OBJECT(\n                'title_group',\n                \"post_groups_412749f0_groups_94123404\".\"title_group\",\n                'count',\n                \"post_groups_412749f0_groups_94123404\".\"count\",\n                'latest_group',\n                \"post_groups_412749f0_groups_94123404\".\"latest_group\"\n              )\n            ),\n            '[]'\n          ) as \"post_groups_result_412749f0\"\n        from\n          (\n            select\n              \"post_groups_412749f0\".\"title\" as \"title_group\",\n              COUNT(*) as \"count\",\n              MAX(\"post_groups_412749f0\".\"created_at\") as \"latest_group\"\n            from\n              \"public\".\"posts\" as \"post_groups_412749f0\"\n            where\n              \"post_groups_412749f0\".\"user_id\" = \"users_99fc7350\".\"id\"\n            group by\n              \"post_groups_412749f0\".\"title\"\n          ) as \"post_groups_412749f0_groups_94123404\"\n      ) as \"post_groups_json_412749f0\" on true\n    limit\n      1\n  ) as \"dsql_root\" on true","parameters":[{"path":"input.users.body.UserStats.params.title"}],"variants":[]},"result":{"fields":[{"path":"users","name":"users","parent_path":"","kind":"object","data_type":"object","nullable":true},{"path":"users.id","name":"id","parent_path":"users","kind":"scalar","data_type":"uuid","nullable":false},{"path":"users.post_stats","name":"post_stats","parent_path":"users","kind":"object","data_type":"object","nullable":false},{"path":"users.post_stats.count","name":"count","parent_path":"users.post_stats","kind":"scalar","data_type":"int","nullable":false},{"path":"users.post_stats.latest","name":"latest","parent_path":"users.post_stats","kind":"scalar","data_type":"timestamptz","nullable":true},{"path":"users.post_groups","name":"post_groups","parent_path":"users","kind":"array","data_type":"object","nullable":false},{"path":"users.post_groups.title_group","name":"title_group","parent_path":"users.post_groups","kind":"scalar","data_type":"text","nullable":true},{"path":"users.post_groups.count","name":"count","parent_path":"users.post_groups","kind":"scalar","data_type":"int","nullable":false},{"path":"users.post_groups.latest_group","name":"latest_group","parent_path":"users.post_groups","kind":"scalar","data_type":"timestamptz","nullable":false}]},"params":[],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[{"path":"users","fragment":"UserStats"}],"source_map":[{"id":"NestedStats","file":"queries/frontend/aggregates.dsql","range":{"start":625,"end":693}}]}
---
RootStats
{"name":"RootStats","kind":"query","sql":{"dialect":"postgres","text":"select\n  JSON_BUILD_OBJECT(\n    'count',\n    COUNT(*),\n    'first_name',\n    MIN(\"user_stats_bde1797f\".\"name\")\n  ) as \"user_stats\"\nfrom\n  \"public\".\"users\" as \"user_stats_bde1797f\"\nwhere\n  \"user_stats_bde1797f\".\"name\" = ($1)","parameters":[{"path":"params.name"}],"variants":[]},"result":{"fields":[{"path":"user_stats","name":"user_stats","parent_path":"","kind":"object","data_type":"object","nullable":false},{"path":"user_stats.count","name":"count","parent_path":"user_stats","kind":"scalar","data_type":"int","nullable":false},{"path":"user_stats.first_name","name":"first_name","parent_path":"user_stats","kind":"scalar","data_type":"text","nullable":true}]},"params":[{"path":"params.name","data_type":"text","enum_values":[],"required":true,"nullable":false}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"RootStats","file":"queries/frontend/aggregates.dsql","range":{"start":394,"end":510}}]}
---
UserStats
{"name":"UserStats","kind":"fragment","table":"users","result":{"fields":[{"path":"post_stats","name":"post_stats","parent_path":"","kind":"object","data_type":"object","nullable":false},{"path":"post_stats.count","name":"count","parent_path":"post_stats","kind":"scalar","data_type":"int","nullable":false},{"path":"post_stats.latest","name":"latest","parent_path":"post_stats","kind":"scalar","data_type":"timestamptz","nullable":true},{"path":"post_groups","name":"post_groups","parent_path":"","kind":"array","data_type":"object","nullable":false},{"path":"post_groups.title_group","name":"title_group","parent_path":"post_groups","kind":"scalar","data_type":"text","nullable":true},{"path":"post_groups.count","name":"count","parent_path":"post_groups","kind":"scalar","data_type":"int","nullable":false},{"path":"post_groups.latest_group","name":"latest_group","parent_path":"post_groups","kind":"scalar","data_type":"timestamptz","nullable":false}]},"params":[{"path":"params.title","data_type":"text","enum_values":[],"required":true,"nullable":false}],"input":[],"dynamic_inputs":[],"fragment_spreads":[],"source_map":[{"id":"UserStats","file":"queries/frontend/aggregates.dsql","range":{"start":0,"end":238}}]}
