crates/dsql-generate/tests/it/snapshots/it__generate__bounded_dynamic_inputs_flow_through_sql_and_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
assertion_line: 653
expression: artifact.serialized
---
{"name":"DynamicUsers","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'id',\n        \"users_99fc7350\".\"id\",\n        'label',\n        (\n          case\n            when ($1) then \"users_99fc7350\".\"name\"\n            else null\n          end\n        )\n      )\n      order by\n        (\n          case\n            when ($1) then \"users_99fc7350\".\"name\"\n            else null\n          end\n        ) asc,\n        {{dynamic:2}},\n        \"users_99fc7350\".\"id\" desc\n    ),\n    '[]'\n  ) as \"users\"\nfrom\n  (\n    select\n      *\n    from\n      \"public\".\"users\" as \"users_99fc7350\"\n    where\n      {{dynamic:0}}\n    order by\n      (\n        case\n          when ($1) then \"users_99fc7350\".\"name\"\n          else null\n        end\n      ) asc,\n      {{dynamic:1}},\n      \"users_99fc7350\".\"id\" desc\n  ) as \"users_99fc7350\"","compact_text":"SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('id', \"users_99fc7350\".\"id\", 'label', (CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ORDER BY (CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END) ASC, {{dynamic:2}}, \"users_99fc7350\".\"id\" DESC), '[]') AS \"users\" FROM (SELECT * FROM \"public\".\"users\" AS \"users_99fc7350\" WHERE {{dynamic:0}} ORDER BY (CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END) ASC, {{dynamic:1}}, \"users_99fc7350\".\"id\" DESC) AS \"users_99fc7350\"","parameters":[{"path":"context.is_admin"}],"variants":[]},"result":{"fields":[{"path":"users","name":"users","parent_path":"","kind":"array","data_type":"object","nullable":false,"access":"unconditional"},{"path":"users.id","name":"id","parent_path":"users","kind":"scalar","data_type":"uuid","nullable":false,"access":"unconditional"},{"path":"users.label","name":"label","parent_path":"users","kind":"scalar","data_type":"text","nullable":true,"access":"context_only"}]},"params":[{"path":"params.order","data_type":"dynamic_order","enum_values":[],"required":false,"nullable":false,"default":{"kind":"collection","items":[]}},{"path":"params.search","data_type":"dynamic_predicate","enum_values":[],"required":false,"nullable":false,"default":{"kind":"empty_object"}}],"input":[],"context":[{"path":"context.is_admin","data_type":"boolean","enum_values":[],"required":true,"nullable":false}],"dynamic_inputs":[{"path":"params.order","kind":"order","surface":"selected","fields":[{"key":"id","catalog_path":"public.users.id","data_type":"uuid","nullable":false,"access":"unconditional","operators":[],"directions":["asc","desc","asc_nulls_first","asc_nulls_last","desc_nulls_first","desc_nulls_last"]},{"key":"label","catalog_path":"public.users.name","data_type":"text","nullable":true,"access":"context_only","operators":[],"directions":["asc","desc","asc_nulls_first","asc_nulls_last","desc_nulls_first","desc_nulls_last"]}],"sites":[{"marker":"{{dynamic:1}}","identity_sql":"NULL::integer","fields":[{"key":"id","operators":[],"directions":[{"value":"asc","text":"(\"users_99fc7350\".\"id\") ASC"},{"value":"desc","text":"(\"users_99fc7350\".\"id\") DESC"},{"value":"asc_nulls_first","text":"(\"users_99fc7350\".\"id\") ASC NULLS FIRST"},{"value":"asc_nulls_last","text":"(\"users_99fc7350\".\"id\") ASC NULLS LAST"},{"value":"desc_nulls_first","text":"(\"users_99fc7350\".\"id\") DESC NULLS FIRST"},{"value":"desc_nulls_last","text":"(\"users_99fc7350\".\"id\") DESC NULLS LAST"}]},{"key":"label","operators":[],"directions":[{"value":"asc","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC"},{"value":"desc","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC"},{"value":"asc_nulls_first","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC NULLS FIRST"},{"value":"asc_nulls_last","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC NULLS LAST"},{"value":"desc_nulls_first","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC NULLS FIRST"},{"value":"desc_nulls_last","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC NULLS LAST"}]}]},{"marker":"{{dynamic:2}}","identity_sql":"NULL::integer","fields":[{"key":"id","operators":[],"directions":[{"value":"asc","text":"(\"users_99fc7350\".\"id\") ASC"},{"value":"desc","text":"(\"users_99fc7350\".\"id\") DESC"},{"value":"asc_nulls_first","text":"(\"users_99fc7350\".\"id\") ASC NULLS FIRST"},{"value":"asc_nulls_last","text":"(\"users_99fc7350\".\"id\") ASC NULLS LAST"},{"value":"desc_nulls_first","text":"(\"users_99fc7350\".\"id\") DESC NULLS FIRST"},{"value":"desc_nulls_last","text":"(\"users_99fc7350\".\"id\") DESC NULLS LAST"}]},{"key":"label","operators":[],"directions":[{"value":"asc","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC"},{"value":"desc","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC"},{"value":"asc_nulls_first","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC NULLS FIRST"},{"value":"asc_nulls_last","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) ASC NULLS LAST"},{"value":"desc_nulls_first","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC NULLS FIRST"},{"value":"desc_nulls_last","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) DESC NULLS LAST"}]}]}]},{"path":"params.search","kind":"predicate","surface":"selected","fields":[{"key":"id","catalog_path":"public.users.id","data_type":"uuid","nullable":false,"access":"unconditional","operators":["eq","neq","in","not_in","is_null"],"directions":[]},{"key":"label","catalog_path":"public.users.name","data_type":"text","nullable":true,"access":"context_only","operators":["eq","neq","like","in","not_in","is_null"],"directions":[]}],"sites":[{"marker":"{{dynamic:0}}","identity_sql":"TRUE","fields":[{"key":"id","operators":[{"name":"eq","value_kind":"scalar","before_value":"(\"users_99fc7350\".\"id\") = ","cases":[]},{"name":"neq","value_kind":"scalar","before_value":"(\"users_99fc7350\".\"id\") != ","cases":[]},{"name":"in","value_kind":"collection","before_value":"(\"users_99fc7350\".\"id\") = ANY(","after_value":")","cases":[]},{"name":"not_in","value_kind":"collection","before_value":"(\"users_99fc7350\".\"id\") <> ALL(","after_value":")","cases":[]},{"name":"is_null","value_kind":"boolean","cases":[{"value":"true","text":"(\"users_99fc7350\".\"id\") IS NULL"},{"value":"false","text":"(\"users_99fc7350\".\"id\") IS NOT NULL"}]}],"directions":[]},{"key":"label","operators":[{"name":"eq","value_kind":"scalar","before_value":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) = ","cases":[]},{"name":"neq","value_kind":"scalar","before_value":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) != ","cases":[]},{"name":"like","value_kind":"scalar","before_value":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) like ","cases":[]},{"name":"in","value_kind":"collection","before_value":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) = ANY(","after_value":")","cases":[]},{"name":"not_in","value_kind":"collection","before_value":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) <> ALL(","after_value":")","cases":[]},{"name":"is_null","value_kind":"boolean","cases":[{"value":"true","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) IS NULL"},{"value":"false","text":"((CASE WHEN ($1) THEN \"users_99fc7350\".\"name\" ELSE NULL END)) IS NOT NULL"}]}],"directions":[]}]}]}],"policies":[{"scope":"frontend","defined_in":"frontend","name":"NameAccess","default_active":true,"enforcement":"always","conditions":[],"context":["context.is_admin"],"source":{"id":"frontend::NameAccess","file":"queries/frontend/dynamic.dsql","range":{"start":0,"end":87}},"applications":[{"path":"users","target":"public.users","assignment":"default","rows_filtered":false,"fields":[{"name":"name","kind":"column","access":"context_only"}]}]}],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"DynamicUsers","file":"queries/frontend/dynamic.dsql","range":{"start":88,"end":269}}]}
