crates/dsql-generate/tests/it/snapshots/it__generate__composed_fragment.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: composed
---
{"name":"PanelBits","kind":"fragment","table":"title","result":{"fields":[{"path":"id","name":"id","parent_path":"","kind":"scalar","value_type":{"shape":"scalar","name":"int","display":"int4","wire":{"encoding":"integer"}},"nullable":false,"access":"unconditional"},{"path":"title","name":"title","parent_path":"","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"text","wire":{"encoding":"text"}},"nullable":false,"access":"unconditional"},{"path":"panel_kind","name":"panel_kind","parent_path":"","kind":"object","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"}},"nullable":false,"access":"unconditional"},{"path":"panel_kind.kind","name":"kind","parent_path":"panel_kind","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"varchar","wire":{"encoding":"text"}},"nullable":false,"access":"unconditional"}]},"params":[],"input":[],"dynamic_inputs":[],"fragment_spreads":[{"path":"","fragment":"TitleBits"},{"path":"panel_kind","fragment":"KindNameBits"}],"source_map":[{"id":"PanelBits","file":"queries/shared/panels.dsql","range":{"start":47,"end":143}}]}
