crates/dsql-generate/tests/it/snapshots/it__generate__configured_catalog_type_rejects_bad_default.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: "error.to_string().replace(&dir.display().to_string(), \"<project>\")"
---
the project has 1 error diagnostics; fix them before generating:
<project>/dsql/queries/events.dsql:19..37: default for `date` does not match inferred type Date
