crates/dsql-generate/tests/it/snapshots/it__generate__configured_catalog_type_rejects_bad_literal.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: "error.to_string().replace(&dir.display().to_string(), \"<project>\")"
---
the project has 1 error diagnostics; fix them before generating:
<project>/dsql/queries/events.dsql:49..59: field `.event_date` expects Date string matching pattern `^[0-9]{4}-[0-9]{2}-[0-9]{2}$` but predicate uses string
