crates/dsql-generate/tests/it/snapshots/it__generate__configured_catalog_types_flow_through_generated_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: artifact
---
{"name":"MappedEvents","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'event_date',\n        CAST(\"events_cc4ff0da\".\"event_date\" as text),\n        'event_dates',\n        CAST(\"events_cc4ff0da\".\"event_dates\" as text[])\n      )\n    ),\n    '[]'\n  ) as \"events\"\nfrom\n  \"public\".\"events\" as \"events_cc4ff0da\"\nwhere\n  \"events_cc4ff0da\".\"event_date\" = ((($1)::text)::\"pg_catalog\".\"date\")","compact_text":"SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('event_date', CAST(\"events_cc4ff0da\".\"event_date\" AS text), 'event_dates', CAST(\"events_cc4ff0da\".\"event_dates\" AS text[]))), '[]') AS \"events\" FROM \"public\".\"events\" AS \"events_cc4ff0da\" WHERE \"events_cc4ff0da\".\"event_date\" = ((($1)::text)::\"pg_catalog\".\"date\")","parameters":[{"path":"params.date"}],"variants":[]},"result":{"fields":[{"path":"events","name":"events","parent_path":"","kind":"array","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"},{"path":"events.event_date","name":"event_date","parent_path":"events","kind":"scalar","value_type":{"shape":"scalar","name":"Date","display":"date","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"},{"path":"events.event_dates","name":"event_dates","parent_path":"events","kind":"scalar","value_type":{"shape":"database_array","name":"Date","display":"date[]","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"}]},"params":[{"path":"params.date","data_type":"Date","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"validation":{"pattern":"^[0-9]{4}-[0-9]{2}-[0-9]{2}$"},"closed_values":{"values":[]},"required":false,"nullable":false,"default":{"kind":"string","value":"2026-07-27"}}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"MappedEvents","file":"dsql/queries/events.dsql","range":{"start":0,"end":118}}]}
